Added in settings options, some basic functionality for adding tasks

--- a/app/src/main/res/menu/smartask.xml
+++ b/app/src/main/res/menu/smartask.xml
@@ -1,10 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Smartask" >
+
     <item android:id="@+id/add_task"
         android:title="Add Task"
         android:showAsAction="always"
         android:icon="@drawable/ic_action_new" />
+
+    <item android:id="@+id/clear_complete"
+        android:title="Clear Completed"
+        android:showAsAction="never" />
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
