--- a/app/src/main/res/layout/activity_smartask.xml
+++ b/app/src/main/res/layout/activity_smartask.xml
@@ -8,4 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Smartask">
 
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/MainTable">
+    </TableLayout>
 </RelativeLayout>
